# rust-tracer

./: .gitignore  Cargo.toml  README.MD
src/: main.rs  scene.rs
src/hitables/: bvh.rs  hitable_list.rs  mod.rs  moving_sphere.rs  sphere.rs
src/hittables/: box_shape.rs  bvh.rs  constant_medium.rs  flip_normal.rs  hittable_list.rs  mod.rs  moving_sphere.rs  rotate_y.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/math/: mod.rs  perlin.rs  vec3.rs
src/physics/: aabb.rs  camera.rs  hitable.rs  material.rs  mod.rs  ray.rs
src/textures/: checker_texture.rs  constant_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  noize_texture.rs  texture.rs
