[package]
name = "rust-tracer"
version = "0.1.0"
authors = ["Konstantin Yakushin <y231966mdk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rayon = "1.2.1"
indicatif="0.13.0"
image = "0.23.14"